feat(script): git user

--- a/vm.yaml
+++ b/vm.yaml
@@ -20,6 +20,7 @@ write_files:
       NODE_VERSION={NODE_VERSION}
       DOCKER_COMPOSE_VERSION={DOCKER_COMPOSE_VERSION}
       DOCKER_COMPOSE_COMMAND_COMPLETION_VERSION={DOCKER_COMPOSE_COMMAND_COMPLETION_VERSION}
+      GIT_USER={GIT_USER}
       AZURE_URL={AZURE_URL}
       AZURE_USER={AZURE_USER}
       AZURE_EMAIL={AZURE_EMAIL}
