fix(script): variables

--- a/vm.yaml
+++ b/vm.yaml
@@ -13,19 +13,19 @@ packages:
 write_files:
   - path: /etc/environment
     content: |
-      USER={USER}
-      HOME={HOME}
-      WORKSPACE={WORKSPACE}
-      NVM_VERSION={NVM_VERSION}
-      NODE_VERSION={NODE_VERSION}
-      DOCKER_COMPOSE_VERSION={DOCKER_COMPOSE_VERSION}
-      DOCKER_COMPOSE_COMMAND_COMPLETION_VERSION={DOCKER_COMPOSE_COMMAND_COMPLETION_VERSION}
-      GIT_USER={GIT_USER}
-      AZURE_URL={AZURE_URL}
-      AZURE_USER={AZURE_USER}
-      AZURE_EMAIL={AZURE_EMAIL}
-      AZURE_SERVER={AZURE_SERVER}
-      AZURE_PASSWORD={AZURE_PASSWORD}
+      USER="{USER}"
+      HOME="{HOME}"
+      WORKSPACE="{WORKSPACE}"
+      NVM_VERSION="{NVM_VERSION}"
+      NODE_VERSION="{NODE_VERSION}"
+      DOCKER_COMPOSE_VERSION="{DOCKER_COMPOSE_VERSION}"
+      DOCKER_COMPOSE_COMMAND_COMPLETION_VERSION="{DOCKER_COMPOSE_COMMAND_COMPLETION_VERSION}"
+      GIT_USER="{GIT_USER}"
+      AZURE_URL="{AZURE_URL}"
+      AZURE_USER="{AZURE_USER}"
+      AZURE_EMAIL="{AZURE_EMAIL}"
+      AZURE_SERVER="{AZURE_SERVER}"
+      AZURE_PASSWORD="{AZURE_PASSWORD}"
     append: true
 runcmd:
   - curl https://raw.githubusercontent.com/j0rtiz/multipass-cloud-init/main/vm.sh | sudo -u {USER} bash
